<resources>
    <string name="app_name">Story App</string>
    <string name="app_detail">Detail Story</string>
    <string name="app_settings">Settings</string>
    <string name="title_welcome">Hey Dico friends, welcome to the Stories App!</string>
    <string name="description_welcome">Share your learning experience with Dicoding? Tell and make friends!</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>
    <string name="version">Version %s</string>
    <string name="title_register">Complete your data below, OK?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="title_login">Are you ready to share your story?</string>
    <string name="description_login">Enter your account data!</string>
    <string name="add_story">Add Story</string>
    <string name="todo_image">Your Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="log_out">Log out</string>
    <string name="password">Password</string>
    <string name="error_password">The number of passwords is less than 6 characters!</string>
    <string name="error_email">Incorrect email format!</string>
    <string name="error_file">Please enter the image file first.</string>
    <string name="error_description">Please enter the description first.</string>
    <string name="error_name_empty">Enter a name.</string>
    <string name="error_email_empty">Enter an email</string>
    <string name="error_200">Response OK, But No Result</string>
    <string name="error_401">Invalid email or password</string>
    <string name="error_403">Access Denied You don\'t have permission to access</string>
    <string name="error_404">Page Not Found</string>
    <string name="error_400">Bad Request, Email may already be registered</string>
    <string name="error_500">Server Error</string>
    <string name="error_password_empty">Enter the password.</string>
    <string name="error_permission">Not getting permissions.</string>
    <string name="error_disable_location">Please turn on your location services, and try again.</string>
    <string name="error_style_parsing">Style parsing failed.</string>
    <string name="error_style_find">Can\'t find style. Error: %s</string>
    <string name="title_add_story">Add New Story</string>
    <string name="title_gallery">Choose a Picture</string>
    <string name="appwidget_text">List Story</string>
    <string name="empty_text">No Data</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="application">Application</string>
    <string name="language">Language</string>
    <string name="summary_language">English, Indonesian, Russian, Spanish</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="summary_sign_out">Logout this session</string>
    <string name="add_location">Add current location</string>
    <string name="tray_again">Tray again</string>
    <string name="clear_location">Clear location</string>
</resources>