<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    android:orientation="vertical"
    tools:context=".view.settings.SettingsActivity">

    <TextView
        android:id="@+id/tvTitleFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/application"
        android:textColor="?attr/colorSecondary" />

    <LinearLayout
        android:id="@+id/ll_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <TextView
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:minHeight="48dp"
            android:paddingStart="32dp"
            android:paddingTop="18sp"
            android:paddingEnd="8dp"
            android:text="@string/language"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:paddingStart="32dp"
            android:paddingEnd="8dp"
            android:paddingBottom="18sp"
            android:text="@string/summary_language" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="32dp"
        android:paddingTop="18sp"
        android:paddingEnd="8dp"
        android:paddingBottom="18sp"
        android:text="@string/dark_mode"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tv_title_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/account"
        android:textColor="?attr/colorSecondary" />

    <LinearLayout
        android:id="@+id/ll_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <TextView
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:minHeight="48dp"
            android:paddingStart="32dp"
            android:paddingTop="18sp"
            android:paddingEnd="8dp"
            android:text="@string/sign_out"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:paddingStart="32dp"
            android:paddingEnd="8dp"
            android:paddingBottom="18sp"
            android:text="@string/summary_sign_out" />
    </LinearLayout>

</LinearLayout>